docs/reports/L21OrthogonalSets.err.log~
Traceback (most recent call last):
  File "/Users/markcrovella/miniconda3/envs/CS132-legacy/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 58, in single_nb_execution
    executenb(
  File "/Users/markcrovella/miniconda3/envs/CS132-legacy/lib/python3.9/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/markcrovella/miniconda3/envs/CS132-legacy/lib/python3.9/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/markcrovella/miniconda3/envs/CS132-legacy/lib/python3.9/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/Users/markcrovella/miniconda3/envs/CS132-legacy/lib/python3.9/asyncio/base_events.py", line 647, in run_until_complete
    return future.result()
  File "/Users/markcrovella/miniconda3/envs/CS132-legacy/lib/python3.9/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/Users/markcrovella/miniconda3/envs/CS132-legacy/lib/python3.9/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/Users/markcrovella/miniconda3/envs/CS132-legacy/lib/python3.9/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
ADD PROJECTION-VIDEO HERE or LATER
------------------

[0;36m  Cell [0;32mIn[3], line 1[0;36m[0m
[0;31m    ADD PROJECTION-VIDEO HERE or LATER[0m
[0m        ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (3186329870.py, line 1)

